--- a/build.gradle
+++ b/build.gradle
@@ -5,11 +5,17 @@ buildscript {
         mavenCentral()
         google()
         jcenter()
-        
+        maven { url 'https://jitpack.io' }
+        maven {
+            url "https://maven.google.com"
+        }
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.2'
         classpath 'com.jakewharton:butterknife-gradle-plugin:10.2.1'
+        classpath 'com.google.gms:google-services:4.3.3'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.2.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -21,7 +27,10 @@ allprojects {
         mavenCentral()
         google()
         jcenter()
-        maven { url 'https://jitpack.io'}
+        maven { url 'https://jitpack.io' }
+        maven {
+            url "https://maven.google.com"
+        }
         
     }
 }
