--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,16 +3,21 @@ apply plugin: 'com.google.gms.google-services'
 apply plugin: 'com.google.firebase.crashlytics'
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 31
     buildToolsVersion "29.0.2"
     defaultConfig {
         applicationId "com.codelabs.konspirasisnack"
         minSdkVersion 16
-        targetSdkVersion 29
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
+    configurations.all {
+        resolutionStrategy {
+            force 'androidx.core:core-ktx:1.6.0'
+        }
     }
     buildTypes {
         release {
@@ -61,7 +66,9 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:3.12.1'
 
     //imagepicker
-    implementation 'com.github.MikeOrtiz:TouchImageView:2.3.3'
+    implementation 'com.github.MikeOrtiz:TouchImageView:3.2.1'
+//    implementation 'com.github.MikeOrtiz:TouchImageView:1.4.1'
+//    implementation 'com.github.MikeOrtiz:TouchImageView:$LAST_VERSION'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'io.reactivex:rxjava:1.3.4'
     implementation 'io.reactivex:rxandroid:1.2.1'
